<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/homeFragment"
    android:layout_width="match_parent"
    android:layout_marginTop="?attr/actionBarSize"
    android:layout_height="match_parent"
    tools:context=".view.HomeFragment">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollableView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/homeFragmentLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/general_margin"
                android:background="@drawable/custom_shape"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/general_margin"
                    android:layout_marginBottom="@dimen/general_margin"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/welcome1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="@font/open_sans_bold"
                        android:text="@string/home_text1"
                        android:textColor="@color/white"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/welcome2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="@font/open_sans_bold"
                        android:text="@string/home_text2"
                        android:textColor="@color/white"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/welcome3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="@font/open_sans_bold"
                        android:text="@string/home_text3"
                        android:textColor="@color/white"
                        android:textSize="20sp" />
                </LinearLayout>

                <ImageView
                    android:id="@+id/imgHomeTitle"
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:src="@drawable/img_home_title" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/game1Name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/general_margin"
                    android:layout_marginStart="@dimen/general_margin"
                    android:fontFamily="@font/open_sans_bold"
                    android:textSize="@dimen/title_text_size" />

                <ImageView
                    android:id="@+id/game1Image"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/general_margin"
                    android:contentDescription="@string/description_recommended_main_game"
                    android:scaleType="centerCrop" />

                <TextView
                    android:id="@+id/bestGamesTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/general_margin"
                    android:layout_marginTop="50dp"
                    android:fontFamily="@font/open_sans_bold"
                    android:text="@string/best_games"
                    android:textSize="@dimen/title_text_size" />

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/gridRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp" />

            <TextView
                android:id="@+id/bestUpcomingTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/general_margin"
                android:layout_marginTop="50dp"
                android:fontFamily="@font/open_sans_bold"
                android:text="@string/best_more_games"
                android:textSize="@dimen/title_text_size" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/horizontalRecyclerView"
                android:layout_width="match_parent"
                android:paddingBottom="100dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>


    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true" />
</RelativeLayout>