<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/general_margin">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/backArrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/back_arrow"
            android:scaleType="fitStart"
            android:src="@drawable/ic_arrow_back" />

        <CheckBox
            android:id="@+id/favouriteCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:button="@drawable/checkbox_selector"
            android:text="@string/favourite" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/general_margin">

        <EditText
            android:id="@+id/noteTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_toStartOf="@id/notePriority"
            android:background="@android:color/transparent"
            android:hint="@string/name"
            android:inputType="text" />

        <EditText
            android:id="@+id/notePriority"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:background="@android:color/transparent"
            android:hint="@string/priority"
            android:inputType="number" />

    </RelativeLayout>

    <EditText
        android:id="@+id/noteDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/general_margin"
        android:background="@android:color/transparent"
        android:hint="@string/description"
        android:inputType="textMultiLine" />

    <Button
        android:id="@+id/saveChangesBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/general_margin"
        android:background="@drawable/custom_shape"
        android:text="@string/save_changes"
        android:textColor="@color/white" />
</LinearLayout>